@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -68,7 +68,7 @@ public class BC_i2d extends JTTTest {
 
     @Test
     public void run6() throws Throwable {
-        runTest("test", new Integer(Short.MAX_VALUE));
+        runTest("test", Integer.valueOf(Short.MAX_VALUE));
     }
 
 }
